fixing spacing of text input

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -168,7 +168,11 @@ article {
 			button { margin: 0 10px 0 60px;}
 		}
 		form {
-			input { @media screen and (max-width: 560px) { width: 150px;}}
+			@media screen and (max-width: 400px) { margin: 10px 0 0 10px;}
+			input {
+				@media screen and (max-width: 560px) { width: 150px;}
+				@media screen and (max-width: 400px) { width: 200px;}
+			}
 			.btn { border-color: $white; background-color: $white; color: $black;}
 		}
 	}
